--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.11.0",
     "openai": "^4.20.1",
+    "pdf-lib": "^1.17.1",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
