--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.9",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -29,12 +28,12 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "ai": "^3.0.0",
+    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "15.0.3",
-    "next-auth": "^4.24.5",
     "next-cloudinary": "^5.11.0",
     "openai": "^4.20.1",
     "pdf-lib": "^1.17.1",
@@ -42,6 +41,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
