--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.0",
     "ai": "^3.0.0",
-    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "15.0.3",
-    "next-cloudinary": "^5.11.0",
     "openai": "^4.20.1",
     "pdf-lib": "^1.17.1",
     "prisma": "^5.7.1",
@@ -50,7 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
