Update environment configuration and integrate Google OAuth
- Update .env.example and env.txt to include Google OAuth credentials and remove outdated Supabase configurations
- Modify package.json and package-lock.json to add necessary dependencies for Google authentication
- Refactor authentication logic to utilize Google OAuth instead of Supabase
- Update Prisma schema to include new fields for user profile management
- Implement new API routes for Google authentication handling and user session management

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,13 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/devsync"
+DATABASE_URL=postgresql://postgres:iv7PkpI6y8NwT8C3@db.okxwbzhbokdwmkqbbjps.supabase.co:5432/postgres
 
-# NextAuth.js
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-key-here"
+# Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
 
-# GitHub OAuth
-GITHUB_CLIENT_ID="your-github-client-id"
-GITHUB_CLIENT_SECRET="your-github-client-secret"
+# App URL
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# OpenAI
-OPENAI_API_KEY="your-openai-api-key"
-
-# Cloudinary
-CLOUDINARY_CLOUD_NAME="your-cloudinary-cloud-name"
-CLOUDINARY_API_KEY="your-cloudinary-api-key"
-CLOUDINARY_API_SECRET="your-cloudinary-api-secret"
-
-# App
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
+# OpenAI (Optional)
+OPENAI_API_KEY=your-openai-api-key
