--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.75.0",
+    "@types/multer": "^2.0.0",
+    "@types/uuid": "^10.0.0",
     "ai": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "google-auth-library": "^10.4.0",
     "lucide-react": "^0.294.0",
+    "multer": "^2.0.2",
     "next": "15.0.3",
     "openai": "^4.20.1",
     "pdf-lib": "^1.17.1",
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.0.0",
+    "uuid": "^13.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
