--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/uuid": "^10.0.0",
     "ai": "^3.0.0",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.0.0",
     "google-auth-library": "^10.4.0",
     "lucide-react": "^0.294.0",
