--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
 # Database
-DATABASE_URL=postgresql://postgres:iv7PkpI6y8NwT8C3@db.okxwbzhbokdwmkqbbjps.supabase.co:5432/postgres
+DATABASE_URL=
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+
+# cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_UPLOAD_PRESET=
 
 # App URL
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=
 
-# OpenAI (Optional)
-OPENAI_API_KEY=your-openai-api-key
+# OpenAI
+OPENAI_API_KEY=
