--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/full-stack-assignment:latest .
+        run: docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/full-stack-assignment:latest .
 
       - name: Push to DockerHub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/full-stack-assignment:latest
