added env example

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,14 @@
-# Database
-DATABASE_URL=
+DATABASE_URL=SOME_DATABASE_URL
 
-# Google OAuth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+GOOGLE_CLIENT_ID=SOME_SECRET_apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=SOME_SECRET
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/callback
 
-# cloudinary
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-CLOUDINARY_UPLOAD_PRESET=
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# App URL
-NEXT_PUBLIC_APP_URL=
+CLOUDINARY_CLOUD_NAME=SOME_CLOUD_NAME
+CLOUDINARY_API_KEY=SOME_API_KEY
+CLOUDINARY_API_SECRET=SOME_API_SECRET
+CLOUDINARY_UPLOAD_PRESET=demo_profile_images
 
-# OpenAI
-OPENAI_API_KEY=
+OPENAI_API_KEY=YOUR_API_KEY
